tests/golden/13.lean.expected
tests/golden/13.lean:23:2: error: aesop: maximum number of rule applications (100) reached. Set the 'maxRuleApplications' option to increase the limit.
tests/golden/13.lean:28:2: error: aesop: failed to prove the goal after exhaustive search.
